adding some values

--- a/values.yaml
+++ b/values.yaml
@@ -1,8 +1,7 @@
-name: harness-example
+name: vault-agent-workload
 replicas: 1
 
 image: ${artifact.metadata.image}
-dockercfg: ${artifact.source.dockerconfig}
 
 createNamespace: true
 namespace: ${infra.kubernetes.namespace}
@@ -13,6 +12,42 @@ namespace: ${infra.kubernetes.namespace}
 # Both are added to the container environment in podSpec as envFrom source.
 env:
   config:
-    key1: value1
+    vault_agent_config: |
+      pid_file = "/etc/vault/pidfile"
+
+      vault {
+        address = "http://15.228.43.18:8200"
+        tls_skip_verify = true
+        retry {
+          num_retries = 5
+        }
+      }
+
+      auto_auth {
+        method "approle" {
+          config = {
+            role_id_file_path = "/etc/vault/credentials/roleid"
+            secret_id_file_path = "/etc/vault/credentials/secretid"
+            remove_secret_id_file_after_reading = false
+          }
+        }
+
+        sink "file" {
+          config = {
+            path = "/etc/vault/sink_shared/sink"
+          }
+        }
+      }
+
+      cache {
+        use_auto_auth_token = true
+      }
+
+
+      listener "tcp" {
+        address = "127.0.0.1:8100"
+        tls_disable = true
+      }
   secrets:
-    key2: value2
+    roleid: NGVjYjMzZjMtZDhhOC04MmNhLTgxMWEtOGUyN2UxM2Y0MWJiCg==
+    secretid: NGVjYjMzZjMtZDhhOC04MmNhLTgxMWEtOGUyN2UxM2Y0MWJiCg==
