--- a/values.yaml
+++ b/values.yaml
@@ -47,5 +47,5 @@ env:
         tls_disable = true
       }
   secrets:
-    roleid: '${secrets.getValue("vault_agent_kubernetes_roleid")}'
+    roleid: '${secrets.getValue("vault_test_2")}'
     secretid: '${secrets.getValue("${workflow.variables.secretid_secretname}")}'
