--- a/values.yaml
+++ b/values.yaml
@@ -46,6 +46,9 @@ env:
         address = "127.0.0.1:8100"
         tls_disable = true
       }
+
+    test_vault_secrets: '${secrets.getValue("${workflow.variables.roleid_secretname}")}' 
+
   secrets:
     roleid: '${secrets.getValue("${workflow.variables.roleid_secretname}")}'
     secretid: '${secrets.getValue("${workflow.variables.secretid_secretname}")}'
