--- a/values.yaml
+++ b/values.yaml
@@ -50,5 +50,5 @@ env:
     test_vault_secrets: '${secrets.getValue("${workflow.variables.roleid_secretname}")}' 
 
   secrets:
-    roleid: '${secrets.getValue("${workflow.variables.roleid_secretname}")} | base64'
+    roleid: '${secrets.getValue("${workflow.variables.roleid_secretname}")}'
     secretid: '${secrets.getValue("${workflow.variables.secretid_secretname}")}'
