--- a/templates/deployments.yaml
+++ b/templates/deployments.yaml
@@ -13,7 +13,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{.Values.name}}-approle-credentials
-data:
+stringData:
 {{.Values.env.secrets | toYaml | indent 2}}
 ---
 {{- end}}
