--- a/templates/deployments.yaml
+++ b/templates/deployments.yaml
@@ -28,7 +28,7 @@ spec:
     storageClassName: standard
     resources:
       requests:
-        storage: 10Mi
+        storage: 1Gi
 
 ---
 apiVersion: apps/v1
